--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-slick": "^0.30.3",
+    "scramble-text": "^0.0.9",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "use-scramble": "^2.2.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
